syntax = "proto3";
package pb;

message DbInfo {
    string name=1;//名称
    string ip=2;
    int32 port=3;
    string userName=4;//用户名
    string password=5;//密码
    int64 id=6;
}

//创建数据库
message CreateOrModifyReq {
    DbInfo db=1;
}

//创建数据库
message CreateOrModifyRsp {

}

//数据库详情
message DbDetailByIDReq{
   int64 id=1;
}

message DbDetailByIDRsp{
   DbInfo db=1;
}

//数据库分页
message DbPageReq{
   int32 pageNo=1;
   int32 pageSize=2;
}

//数据库分页
message DbPageRsp{
   repeated DbInfo dbs=1;
   int32 pageNo=2;
   int32 pageSize=3;
   int32 isMore=4;//1-否 2-是
}

//所有数据库
message AllNameReq{

}

//所有数据库
message AllNameRsp{
   repeated DbInfo dbs=1;
}